--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 	<script src="js/angularfire.min.js"></script>
   </head>
   <body ng-app="starter">
+	  oooooh noooo
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
