--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,17 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable" ng-controller="NavCtrl">
       <ion-nav-back-button>
       </ion-nav-back-button>
+      <ion-nav-buttons side="right">
+	      <button class="button" ng-class="classLoggedIn()" ng-click="openNotifications($event)">
+		      Do a flip
+	      </button>
+	      <button class="button" ng-class="classLoggedIn()" ng-click="logOut()">
+		      Log out
+	      </button>
+      </ion-nav-buttons>
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
